--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,4 +19,9 @@ Imports:
     shiny
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.3
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Language: en-US
