feat: implement dashboard module.
* Add dashboard UI and server functions to display energy consumption and emissions data.
* Update app UI to include the new dashboard module.
* Enhance app server logic to integrate data upload and dashboard functionalities.
* Update DESCRIPTION file to include new package dependencies.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,14 +8,17 @@ Authors@R:
            email = "tiago.adria@gmail.com")
 Description: Susneo Shiny App.
 License: MIT
-Imports: 
+Imports:
     attempt,
     config,
+    dplyr,
     DT,
     glue,
     golem,
     htmltools,
+    lubridate,
     pkgload,
+    plotly,
     shiny
 Encoding: UTF-8
 LazyData: true
