--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,15 +10,17 @@ Description: Susneo Shiny App.
 License: MIT
 Imports:
     attempt,
+    bsicons,
+    bslib,
     config,
     dplyr,
     DT,
     glue,
     golem,
+    highcharter,
     htmltools,
     lubridate,
     pkgload,
-    plotly,
     shiny
 Encoding: UTF-8
 LazyData: true
