--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,24 +9,26 @@ Authors@R:
 Description: Susneo Shiny App.
 License: MIT
 Imports:
-    attempt,
     bsicons,
     bslib,
     config,
     dplyr,
     DT,
-    glue,
     golem,
     highcharter,
-    htmltools,
+    htmlwidgets,
     lubridate,
-    pkgload,
-    shiny
+    R6,
+    shiny,
+    utils,
+    zoo
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
-Suggests: 
+Suggests:
+    here,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Config/testthat/load-all: list(export_all = FALSE, helpers = FALSE)
 Language: en-US
