--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,62 @@
 
 export(run_app)
 import(shiny)
+importFrom(DT,dataTableOutput)
+importFrom(DT,datatable)
+importFrom(DT,renderDataTable)
+importFrom(R6,R6Class)
+importFrom(bsicons,bs_icon)
+importFrom(bslib,card)
+importFrom(bslib,card_body)
+importFrom(bslib,card_header)
+importFrom(bslib,layout_columns)
+importFrom(bslib,page_sidebar)
+importFrom(bslib,sidebar)
+importFrom(bslib,value_box)
+importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,lag)
+importFrom(dplyr,mutate)
+importFrom(dplyr,summarise)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(highcharter,hc_add_series)
+importFrom(highcharter,hc_colors)
+importFrom(highcharter,hc_title)
+importFrom(highcharter,hc_tooltip)
+importFrom(highcharter,hc_xAxis)
+importFrom(highcharter,hc_yAxis)
+importFrom(highcharter,hcaes)
+importFrom(highcharter,hchart)
+importFrom(highcharter,highchart)
+importFrom(highcharter,highchartOutput)
+importFrom(highcharter,renderHighchart)
+importFrom(htmlwidgets,JS)
+importFrom(lubridate,as_date)
+importFrom(lubridate,parse_date_time)
 importFrom(shiny,NS)
+importFrom(shiny,actionButton)
+importFrom(shiny,dateRangeInput)
+importFrom(shiny,div)
+importFrom(shiny,fileInput)
+importFrom(shiny,h1)
+importFrom(shiny,isolate)
+importFrom(shiny,moduleServer)
+importFrom(shiny,observe)
+importFrom(shiny,observeEvent)
+importFrom(shiny,reactive)
+importFrom(shiny,reactiveVal)
+importFrom(shiny,renderUI)
+importFrom(shiny,selectizeInput)
 importFrom(shiny,shinyApp)
+importFrom(shiny,showNotification)
 importFrom(shiny,tagList)
+importFrom(shiny,uiOutput)
+importFrom(shiny,updateDateRangeInput)
+importFrom(shiny,updateSelectizeInput)
 importFrom(utils,read.csv)
