--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,20 +8,27 @@ Authors@R:
            email = "tiago.adria@gmail.com")
 Description: Susneo Shiny App.
 License: MIT
-Imports: 
-    attempt,
+Imports:
+    bsicons,
+    bslib,
     config,
+    dplyr,
     DT,
-    glue,
     golem,
-    htmltools,
-    pkgload,
-    shiny
+    highcharter,
+    htmlwidgets,
+    lubridate,
+    R6,
+    shiny,
+    utils,
+    zoo
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
-Suggests: 
+Suggests:
+    here,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Config/testthat/load-all: list(export_all = FALSE, helpers = FALSE)
 Language: en-US
