refactor: rename package and update references to susneoEnergyDashboard
* Updated package name from `susneo` to `susneoEnergyDashboard` across all relevant files.
* Adjusted function calls and data loading methods to reflect the new package name.
* Enhanced app UI with busy indicators and improved data handling in the dashboard module.
* Updated DESCRIPTION file with new title and version number.
* Removed renv configuration files as part of the cleanup process.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: susneo
-Title: Susneo Shiny App
-Version: 0.0.0.9000
+Package: susneoEnergyDashboard
+Title: SUSNEO Energy Dashboard
+Version: 0.0.0.9007
 Authors@R: 
     person(given = "firstname",
            family = "lastname",
