chore: update DESCRIPTION and WORDLIST files
* Added R version dependency to DESCRIPTION.
* Updated WORDLIST with new entries for improved functionality and user experience.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: susneoEnergyDashboard
 Title: SUSNEO Energy Dashboard
 Version: 0.0.0.9007
+Depends: R (>= 4.1.0)
 Authors@R: 
     person(given = "Tiago",
            family = "Adria Nunes",
            role = c("aut", "cre"),
            email = "tiagoadrianunes@gmail.com")
 Description: Susneo Shiny App.
-License: MIT
+License: MIT + file LICENSE
 Imports:
     bsicons,
     bslib,
