chore: update DESCRIPTION, NAMESPACE, and R files for improved functionality
* Specified minimum version for bsicons in DESCRIPTION.
* Updated LICENSE file to include year and copyright holder.
* Refined NAMESPACE imports for shiny functions to enhance clarity and organization.
* Removed unnecessary shiny import statements in R files and replaced them with specific imports.
* Added new entries to WORDLIST for better user experience.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R:
 Description: Susneo Shiny App.
 License: MIT + file LICENSE
 Imports:
-    bsicons,
+    bsicons (>= 0.1.2),
     bslib,
     config,
     dplyr,
