--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,12 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
 Suggests:
+    covr,
+    devtools,
     here,
+    knitr,
+    lintr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
