--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
-Package: susneo
-Title: Susneo Shiny App
-Version: 0.0.0.9000
+Package: susneoEnergyDashboard
+Title: SUSNEO Energy Dashboard
+Version: 0.0.0.9007
+Depends: R (>= 4.1.0)
 Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
+    person(given = "Tiago",
+           family = "Adria Nunes",
            role = c("aut", "cre"),
-           email = "tiago.adria@gmail.com")
+           email = "tiagoadrianunes@gmail.com")
 Description: Susneo Shiny App.
-License: MIT
+License: MIT + file LICENSE
 Imports:
-    bsicons,
+    bsicons (>= 0.1.2),
     bslib,
     config,
     dplyr,
@@ -26,7 +27,12 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
 Suggests:
+    covr,
+    devtools,
     here,
+    knitr,
+    lintr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
