--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,10 +41,13 @@ importFrom(lubridate,as_date)
 importFrom(lubridate,parse_date_time)
 importFrom(shiny,NS)
 importFrom(shiny,actionButton)
+importFrom(shiny,br)
 importFrom(shiny,dateRangeInput)
+importFrom(shiny,debounce)
 importFrom(shiny,div)
 importFrom(shiny,fileInput)
 importFrom(shiny,h1)
+importFrom(shiny,h3)
 importFrom(shiny,isolate)
 importFrom(shiny,moduleServer)
 importFrom(shiny,observe)
@@ -52,11 +55,14 @@ importFrom(shiny,observeEvent)
 importFrom(shiny,reactive)
 importFrom(shiny,reactiveVal)
 importFrom(shiny,renderUI)
+importFrom(shiny,req)
 importFrom(shiny,selectizeInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,showNotification)
 importFrom(shiny,tagList)
+importFrom(shiny,tags)
 importFrom(shiny,uiOutput)
 importFrom(shiny,updateDateRangeInput)
 importFrom(shiny,updateSelectizeInput)
+importFrom(shiny,useBusyIndicators)
 importFrom(utils,read.csv)
